# TDD-Project

./: .pre-commit-config.yaml  Makefile  pyproject.toml
tests/schemas/: test_product.py
